// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`implicit-call.coffee 1`] = `
# implicit calls
[aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeeee)]

f(aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeee))

{a, aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeee)}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeeeeeeee)

(aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc), d = ddddddd(eeeeeeee)) ->

# Object that omits braces if parent breaks
[a, {b: c(d), e: f(g)}, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
  h
]

[a, {b: c(d), e: f(g)}]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return {a: b(c), d: e(f)} if g

return {aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc), dddddddddd: eeeeeee(ffffff)} if g
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit calls
[
  aaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbb ccccccccccccccccc
  ddddddddd eeeeeeeeeeeeee
]

f(
  aaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbb ccccccccccccccccc
  ddddddddd eeeeeeeeeeeee
)

{
  a
  aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb ccccccccccccccccc
  d: ddddddddd eeeeeeee
}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb ccccccccccccccccc
d: ddddddddd eeeeeeeeeeeee

(
  aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb ccccccccccccccccc
  d = ddddddd eeeeeeee
) ->

# Object that omits braces if parent breaks
[a, { b: c(d), e: f g }, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
,
  h
]

[a, { b: c(d), e: f g }]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return a: b(c), d: e f if g

return {
  aaaaaaaaaaaaaaaaaa: bbbbbbbbb cccccccccc
  dddddddddd: eeeeeee ffffff
} if g

`;

exports[`implicit-call.coffee 2`] = `
# implicit calls
[aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeeee)]

f(aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeee))

{a, aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeee)}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeeeeeeee)

(aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc), d = ddddddd(eeeeeeee)) ->

# Object that omits braces if parent breaks
[a, {b: c(d), e: f(g)}, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
  h
]

[a, {b: c(d), e: f(g)}]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return {a: b(c), d: e(f)} if g

return {aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc), dddddddddd: eeeeeee(ffffff)} if g
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit calls
[
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  ddddddddd eeeeeeeeeeeeee
]

f(
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  ddddddddd eeeeeeeeeeeee
)

{
  a,
  aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  d: ddddddddd eeeeeeee
}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb ccccccccccccccccc
d: ddddddddd eeeeeeeeeeeee

(
  aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  d = ddddddd eeeeeeee
) ->

# Object that omits braces if parent breaks
[a, { b: c(d), e: f g }, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
,
  h
]

[a, { b: c(d), e: f g }]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return a: b(c), d: e f if g

return {
  aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc),
  dddddddddd: eeeeeee ffffff
} if g

`;

exports[`implicit-call.coffee 3`] = `
# implicit calls
[aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeeee)]

f(aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeee))

{a, aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeee)}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeeeeeeee)

(aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc), d = ddddddd(eeeeeeee)) ->

# Object that omits braces if parent breaks
[a, {b: c(d), e: f(g)}, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
  h
]

[a, {b: c(d), e: f(g)}]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return {a: b(c), d: e(f)} if g

return {aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc), dddddddddd: eeeeeee(ffffff)} if g
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit calls
[
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  ddddddddd(eeeeeeeeeeeeee),
]

f(
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  ddddddddd(eeeeeeeeeeeee),
)

{
  a,
  aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  d: ddddddddd(eeeeeeee),
}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb ccccccccccccccccc
d: ddddddddd eeeeeeeeeeeee

(
  aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  d = ddddddd(eeeeeeee),
) ->

# Object that omits braces if parent breaks
[a, { b: c(d), e: f g }, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
,
  h,
]

[a, { b: c(d), e: f g }]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return a: b(c), d: e f if g

return {
  aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc),
  dddddddddd: eeeeeee(ffffff),
} if g

`;

exports[`implicit-object.coffee 1`] = `
# implicit objects
[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggggggg: hhhhhhh}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggg: hhh, ii: jj}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, {eeeeeeeeee: ffff, gggg: hhh, ii: jj}]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit objects
[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggggggg: hhhhhhh
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggg: hhh, ii: jj
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeee: ffff, gggg: hhh, ii: jj
]

`;

exports[`implicit-object.coffee 2`] = `
# implicit objects
[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggggggg: hhhhhhh}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggg: hhh, ii: jj}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, {eeeeeeeeee: ffff, gggg: hhh, ii: jj}]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit objects
[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggggggg: hhhhhhh
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggg: hhh, ii: jj
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeee: ffff, gggg: hhh, ii: jj
]

`;

exports[`implicit-object.coffee 3`] = `
# implicit objects
[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggggggg: hhhhhhh}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggg: hhh, ii: jj}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, {eeeeeeeeee: ffff, gggg: hhh, ii: jj}]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit objects
[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggggggg: hhhhhhh
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggg: hhh, ii: jj
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeee: ffff, gggg: hhh, ii: jj
]

`;

exports[`object.coffee 1`] = `
a: b

BREAK

a: b
c: d

BREAK

{a, b: c}

{aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, dddddddddd: eeee}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc
  dddddddddd:
    eeee
}

({aaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, ddddddddd: e}) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: b

BREAK

a: b
c: d

BREAK

{ a, b: c }

{
  aaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc
  dddddddddd: eeee
}

{
  aaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc
  dddddddddd:
    eeee
}

({
  aaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc
  ddddddddd: e
}) ->

`;

exports[`object.coffee 2`] = `
a: b

BREAK

a: b
c: d

BREAK

{a, b: c}

{aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, dddddddddd: eeee}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc
  dddddddddd:
    eeee
}

({aaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, ddddddddd: e}) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: b

BREAK

a: b
c: d

BREAK

{ a, b: c }

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc,
  dddddddddd: eeee
}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc,
  dddddddddd:
    eeee
}

({
  aaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc,
  ddddddddd: e
}) ->

`;

exports[`object.coffee 3`] = `
a: b

BREAK

a: b
c: d

BREAK

{a, b: c}

{aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, dddddddddd: eeee}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc
  dddddddddd:
    eeee
}

({aaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, ddddddddd: e}) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: b

BREAK

a: b
c: d

BREAK

{ a, b: c }

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc,
  dddddddddd: eeee,
}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc,
  dddddddddd:
    eeee,
}

({
  aaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc,
  ddddddddd: e,
}) ->

`;

exports[`object-as-item.coffee 1`] = `
[{a, b: c}, d: e, f: g, h]

f({a, b: c}, d: e, f: g, h)

[
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

[
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{a, b: c}, d: e, f: g]

f({a, b: c}, d: e, f: g)

[
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

# trailing explicit object
[{a, b: c}]

f({a, b: c})

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
]

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

# non-trailing explicit object not adjacent to implicit object
[{a, b: c}, d]

f({a, b: c}, d)

[{a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd]

f({a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[{ a, b: c }, { d: e, f: g }, h]

f { a, b: c }, { d: e, f: g }, h

[
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

[
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{ a, b: c }, { d: e, f: g }]

f { a, b: c }, d: e, f: g

[
  { a, b: c }
,
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  { a, b: c }
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

# trailing explicit object
[{ a, b: c }]

f { a, b: c }

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
]

f aaaaaaaaaaaaaaaaaaaaaaaaaaaaa, {
  a
  b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
}

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
)

# non-trailing explicit object not adjacent to implicit object
[{ a, b: c }, d]

f { a, b: c }, d

[
  { a, b: c }
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
]

f(
  { a, b: c }
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
)

`;

exports[`object-as-item.coffee 2`] = `
[{a, b: c}, d: e, f: g, h]

f({a, b: c}, d: e, f: g, h)

[
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

[
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{a, b: c}, d: e, f: g]

f({a, b: c}, d: e, f: g)

[
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

# trailing explicit object
[{a, b: c}]

f({a, b: c})

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
]

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

# non-trailing explicit object not adjacent to implicit object
[{a, b: c}, d]

f({a, b: c}, d)

[{a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd]

f({a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[{ a, b: c }, { d: e, f: g }, h]

f { a, b: c }, { d: e, f: g }, h

[
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

[
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{ a, b: c }, { d: e, f: g }]

f { a, b: c }, d: e, f: g

[
  { a, b: c }
,
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  { a, b: c },
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

# trailing explicit object
[{ a, b: c }]

f { a, b: c }

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
]

f aaaaaaaaaaaaaaaaaaaaaaaaaaaaa, {
  a,
  b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
}

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
)

# non-trailing explicit object not adjacent to implicit object
[{ a, b: c }, d]

f { a, b: c }, d

[
  { a, b: c },
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
]

f(
  { a, b: c },
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
)

`;

exports[`object-as-item.coffee 3`] = `
[{a, b: c}, d: e, f: g, h]

f({a, b: c}, d: e, f: g, h)

[
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

[
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{a, b: c}, d: e, f: g]

f({a, b: c}, d: e, f: g)

[
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

# trailing explicit object
[{a, b: c}]

f({a, b: c})

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
]

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

# non-trailing explicit object not adjacent to implicit object
[{a, b: c}, d]

f({a, b: c}, d)

[{a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd]

f({a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[{ a, b: c }, { d: e, f: g }, h]

f { a, b: c }, { d: e, f: g }, h

[
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
]

f(
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
)

[
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
]

f(
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
)

# trailing implicit object
[{ a, b: c }, { d: e, f: g }]

f { a, b: c }, d: e, f: g

[
  { a, b: c }
,
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  { a, b: c },
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

# trailing explicit object
[{ a, b: c }]

f { a, b: c }

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc },
]

f aaaaaaaaaaaaaaaaaaaaaaaaaaaaa, {
  a,
  b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc,
}

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc },
)

# non-trailing explicit object not adjacent to implicit object
[{ a, b: c }, d]

f { a, b: c }, d

[
  { a, b: c },
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd,
]

f(
  { a, b: c },
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd,
)

`;

exports[`params.coffee 1`] = `
(a) ->

(a, b) ->

(aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(a) ->

(a, b) ->

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
) ->

`;

exports[`params.coffee 2`] = `
(a) ->

(a, b) ->

(aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(a) ->

(a, b) ->

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
) ->

`;

exports[`params.coffee 3`] = `
(a) ->

(a, b) ->

(aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(a) ->

(a, b) ->

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
) ->

`;
